--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.48.0",
     "@web3modal/wagmi": "^5.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.4.3",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-number-format": "^5.4.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.16.2",
